2017-07-07         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (yyerror): Produce better diagnostics for source
	files that are not whole syntactic units.

2017-07-07         Arnold D. Robbins     <arnold@skeeve.com>

	* gawapi.h: Bring descriptive comments up to date, minor edits.
	* io.c: Add some initial comments to functions where they were missing.

2017-07-03         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkapi.h, gawkapi.c: Typo fixes in comments.

2017-07-01         Arnold D. Robbins     <arnold@skeeve.com>

	* symbol.c (install): Don't call fix_up_namespace if
	installing parameters.
	* profile.c (remove_namespace): Renamed to
	(adjust_namespace): Make smarter and add boolean parameter for
	if return was mallc'ed. Adjust calls.

2017-06-30         Arnold D. Robbins     <arnold@skeeve.com>

	Add namespace info into Op_Rule and Op_Func.
	Fix memory management problem.
	The changes temporarily break the test suite.

	* awk.h (MAX_INSTRUCTION_ALLOC): Increase to 4.
	(Op_K_namespace): Remove, not needed.
	* eval.c (optypetab): Remove Op_K_namespace.
	* awkgram.y (make_pp_namespace): New function.
	(yylex): For BEGIN etc, allocate 4 in the instruction.
	(install_func): Save namespace name for Op_rule.
	(append_rule): Save namespace name for Op_rule.
	* debug.c (print_instruction): Print namespace for Op_rule, Op_func.
	Remove Op_K_namespace.
	* profile.c (pp_namespace, remove_namespace): New functions.
	(pprint): Call `pp_namespace'. Use `remove_namespace' on variable
	names.
	(pp_func): Ditto on both.
	* symbol.c (lookup): Initialize `malloced' to false.
	(install): Ditto.

	Unbreak the test suite:

	* awk.h (namespace_changed): Declare new boolean variable.
	* awkgram.y (namespace_changed): Define new boolean variable.
	(set_namespace): Set it to true when the namespace is changed.
	* main.c (main): Set current_namespace to "awk::" for the pretty
	printer.
	* profile.c (pp_namespace): If namespace_changed is false, return.
