@@ -603,6 +603,7 @@ typedef struct gawk_api {
 	 *	}
 	 */
 	awk_bool_t (*api_sym_lookup)(awk_ext_id_t id,
+				const char *namespace,
 				const char *name,
 				awk_valtype_t wanted,
 				awk_value_t *result);
@@ -614,6 +615,7 @@ typedef struct gawk_api {
 	 * Such an attempt returns false.
 	 */
 	awk_bool_t (*api_sym_update)(awk_ext_id_t id,
+				const char *namespace,
 				const char *name,
 				awk_value_t *value);
 
@@ -834,11 +836,17 @@ typedef struct gawk_api {
 #define awk_atexit(funcp, arg0)	(api->api_awk_atexit(ext_id, funcp, arg0))
 
 #define sym_lookup(name, wanted, result) \
-	(api->api_sym_lookup(ext_id, name, wanted, result))
+	sym_lookup_ns("", name, wanted, result)
+#define sym_update(name, value) \
+	sym_update_ns("", name, value)
+
+#define sym_lookup_ns(namespace, name, wanted, result) \
+	(api->api_sym_lookup(ext_id, namespace, name, wanted, result))
+#define sym_update_ns(namespace, name, value) \
+	(api->api_sym_update(ext_id, namespace, name, value))
+
 #define sym_lookup_scalar(scalar_cookie, wanted, result) \
 	(api->api_sym_lookup_scalar(ext_id, scalar_cookie, wanted, result))
-#define sym_update(name, value) \
-	(api->api_sym_update(ext_id, name, value))
 #define sym_update_scalar(scalar_cookie, value) \
 	(api->api_sym_update_scalar)(ext_id, scalar_cookie, value)
 
